@@ -195,10 +195,7 @@ class Tx_Seminars_Tests_Unit_BackEnd_ConfirmEventMailFormTest extends Tx_Phpunit
      */
     public function renderContainsPrefilledBodyFieldWithLocalizedSalutation()
     {
-        self::assertContains(
-            $GLOBALS['LANG']->getLL('mailForm_salutation'),
-            $this->fixture->render()
-        );
+        self::assertContains('salutation', $this->fixture->render());
     }
 
     /**
@@ -299,8 +296,7 @@ class Tx_Seminars_Tests_Unit_BackEnd_ConfirmEventMailFormTest extends Tx_Phpunit
             )
         );
 
-        $messageBody = '%' . $GLOBALS['LANG']->getLL('mailForm_salutation') .
-            $GLOBALS['LANG']->getLL('cancelMailForm_prefillField_messageBody');
+        $messageBody = '%salutation' . $GLOBALS['LANG']->getLL('cancelMailForm_prefillField_messageBody');
 
         $this->fixture->setPostData(
             array(
